k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-tracker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: finance-tracker
  template:
    metadata:
      labels:
        app: finance-tracker
    spec:
      containers:
      - name: finance-tracker
        image: personal_expenses_tracker:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          periodSeconds: 60
          failureThreshold: 5
